--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     --hover: hsla(204, 95%, 43%, 0.274);
     --background-color: hsla(204, 95%, 43%, 0.274);
     --menu-e-materias: hsla(191, 46%, 79%, 0.527);
+    --plus-background-color: hsla(191, 46%, 79%, 0.527);
 
 }
 
@@ -27,6 +28,338 @@ body {
 body img {
     cursor: pointer;
 }
+/* -----------------POPUPCADASTRO---------------- */
+.cadastrowrapper {
+    width: 100%;
+    height: 100%;
+    transform: translateY(-100%);
+    z-index: 6;
+    transition: 400ms;
+    position: fixed;
+   
+    align-items: center;
+    justify-items: center;
+    margin-block: auto;
+    display: flex;
+    flex-direction: column;
+  }
+  .divAllCadastro {
+  }
+  
+  .backgroundcadastro {
+    position:absolute;
+    position: fixed;
+    
+    z-index: 5;
+    transform: translateX(-100%);
+    transition: 400ms;
+  }
+.cadastro .buttoncadastro {
+  margin: 3rem 4rem;
+  width: 200px;
+}
+.gender {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  gap: 0;
+}
+.gender p {
+  margin: 0;
+  padding: 0;
+  width: 100px;
+  font-size: 1.4rem;
+  color: #d0a144;
+}
+.gender .genero input {
+  position: relative;
+  right: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+}
+.gender .genero {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content:start;
+  width: 100%;
+}
+.idade h4 {
+  color: #d0a144;
+}
+/* --------------------------POPUP------------------------ */
+#login_icon {
+    cursor: pointer;
+    margin-left: 2rem;
+   }
+.popup_wrapper {
+  padding-block: 5%;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0 ,0, .5);
+  z-index: 5;
+  
+  align-content: center;
+  display: flex;
+  flex-direction: column;
+ transform: translateY(100%);
+  transition: 400ms;
+  
+}
+.popup_wrapper .openpopup {
+  transform: translateY(0%);
+
+}
+.backgroundLogin {
+  position:absolute;
+  position: fixed;
+  
+  z-index: 1;
+  transform: translateX(100%);
+  transition: 400ms;
+}
+.showw {
+  transform: translateX(0%);
+}
+.show {
+    transform: translateY(15%);
+   
+  }
+  .popup_wrapper {
+    display: none;
+
+  }
+.linha {
+  position: relative;
+  margin-inline: auto;
+  width: 50px;
+  height: 100%;
+  min-height: none;
+
+  top: -6rem;
+}
+.ou {
+  width: 100%
+}
+.ou p {
+  position: absolute;
+  top: 250px;
+  left: 0px;
+  background-color: white;
+  width: 50px;
+  padding-block: 1rem;
+}
+.ou p {
+  font-size: 1rem;
+}
+
+
+.popup {
+  justify-content: space-between;
+  position: relative;
+  background: white;
+  width: 60%;
+  height: 100%;
+  /* margin-block: auto; */
+  border-radius: 4rem;
+  display: flex;
+  min-width: 700px;
+  max-width: 800px;
+  max-height: 600px;
+
+  padding-top: 12rem;
+
+}
+.popup a {
+  color: white;
+}
+.socialConectLinks {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 345px;
+  margin: 0;
+  margin-inline: auto;
+}
+.socialConectLinks button {
+  margin: 1rem auto 1rem 4em;
+  width: 25rem;
+  height: 4rem;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  gap: 2rem;
+  border-radius: 1rem;
+  border-style: none;
+  padding-left: .5rem;
+}
+.facebook {
+  background: #3b5998;
+  display: flex;
+  align-content: center;
+}
+.facebook a {
+  font-size: 1.2rem;
+margin: 0;
+}
+.socialConectLinks .google {
+  background-color: white;
+  border: solid 2px rgba(0, 0 ,0, .2);
+  align-items: center;
+  display: flex;
+}
+.google a {
+  color: rgba(0, 0 ,0, .5);
+  margin: 0;
+  height: 30px;
+}
+.google h4  {
+  height: 2.2rem;
+  margin-top: .5rem;
+  font-size: 1.2rem;
+
+}
+.popup h2 {
+  font-size: 2.4rem;
+  margin: 0 auto;
+  padding: 0;
+  text-align: left;
+}
+.popup .socialConectLinks h2 {
+  margin-inline: auto;
+  width:240px;
+}
+.sectionLogin .slaaa h2 {
+position: relative;
+bottom: 100rem;
+}
+.sectionLogin .slaaa {
+  margin-left: 0;
+  
+}
+
+.sectionLogin {
+  width: 345px;
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
+}
+
+.allLogin {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  margin: 0;
+  justify-items: flex-start;
+}
+.sectionLogin input {
+  padding-left: 1rem;
+  margin-left: 0;
+  text-align: start;
+  border: solid 1px black;
+  border-radius: .5rem;
+  height: 4rem;
+  box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
+border-radius: 5px;
+position: relative;
+right: 3rem;
+}
+.sectionLogin input:hover {
+  border: solid 1px #d0a144;
+}
+/* .sectionLogin input {
+  border: solid 1px #d0a144;
+} */
+.forgot a {
+  color: #d0a144 !important;
+  font-size: 1rem;
+  
+}
+.forgot {
+  margin: 1rem 0 1.5rem 0;
+  width: 123px;
+  
+}
+.sectionLogin .label {
+  position: fixed;
+  bottom: 29.1rem;
+  font-size: 1rem;
+  background: white;
+  z-index: 7;
+
+}
+.sectionLogin .labelSenha {
+  position: absolute;
+  bottom: 22.1rem;
+  font-size: 1rem;
+  background: white;
+  z-index: 7;
+}
+.entrar {
+  margin-inline:.6rem 0 ;
+  padding: 0;
+  width: 40%;
+  height: 40px;
+  border-radius: 5px;
+  border: none;
+  background-color: #d0a144;
+  
+}
+.entrar:hover{
+  box-shadow: red;
+  background-color: black;
+  color: white;
+  border: none;
+}
+.entrar:hover a{
+color: white;
+}
+  .entrar a {
+  color: black;
+  font-weight: 800;
+  
+}
+.popupCadastro {
+  margin-top: 0;
+  z-index: 150;
+}
+.popupCadastro button {
+  z-index: 150;
+  margin-inline:.6rem 0 ;
+  margin-top: 1rem;
+  font-size: 1.8rem;
+  font-weight: 800;
+  padding: 0;
+  width: 200px;
+  height: 50px;
+  border-radius: 5px;
+  border: none;
+  background-color: white;
+
+}
+.popupCadastro button:hover {
+  background-color: #d0a144;
+  color: white;
+  border: none;
+}
+
+
+.overflowY {
+  overflow-y: hidden;
+}
+
+.closeOpenLogin {
+  position: absolute;
+  right:3rem;
+  top: 2rem;
+  cursor: pointer;
+  
+}
+
 /* --------------------------NAV------------------------ */
 nav {
     transition: 900ms ease-in-out;
@@ -44,6 +377,8 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    z-index: 4;
 }
 
 nav .fixed{
@@ -118,6 +453,13 @@ border-radius: 10rem;
 
 border: none;
 background-color: rgb(241, 241, 241);
+}
+.input:focus-within {
+    border: none;
+}
+.search input:focus-within {
+    border:7px solid aquamarine;
+
 }
 .navContent2 a {
     display: flex;
@@ -323,6 +665,8 @@ header img {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    height: 180rem;
 }
 
 .contentQuestions {
@@ -331,6 +675,9 @@ header img {
 
     justify-content: center;
     align-items: center;
+
+    position: relative;
+    top: -30rem;
 }
 .contentQuestions1 {
     height: 20rem;
@@ -394,28 +741,6 @@ header img {
     right: 20px;
     bottom:30px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .bals {
     display: flex;
     gap: .5rem;
@@ -479,3 +804,129 @@ header img {
     transform: translateY(0px) !important;
 }
 
+/* --------------------------PLUS------------------------ */ 
+
+#plus {
+    height: 100rem;
+    position: relative; 
+    background-color: var(--plus-background-color);
+    
+}
+.plusContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+
+
+    justify-content: center;
+    align-items: center;
+
+    text-align: center;
+
+    padding-top: 12rem;
+}
+.plusContainer h2 {
+    font-weight: 200;
+    font-family: 'Alfa Slab One', cursive;
+
+}
+.cardPlus {
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: center;
+
+    margin-inline: auto;
+    
+    width: 50%;
+    height: 50rem;
+    min-width: 50rem;
+
+
+    padding-inline: 10%;
+
+    background-color: rgb(161, 224, 226);
+
+    border-radius: 10px;
+
+    position: relative;
+}
+.cardPlus h2 {
+    font-size: 3.4rem;
+    font-weight: 400;
+    
+    font-family: 'Alfa Slab One', cursive;
+    
+    z-index: 5;
+
+}
+.cardPlus button a {
+    font-weight: 900;    
+}
+.contentPlus img {
+    position: absolute;
+    top: 3rem;
+    right: 3rem;
+
+    opacity: .5;
+
+    cursor: initial;
+    
+}
+
+.contentPlus {
+    display: flex;
+    justify-content: space-between;
+
+    width: 100%;
+    
+    margin-bottom: 5rem;
+
+}
+.cardPlus ul {
+    display: flex;
+    flex-direction: column;
+
+    gap: 1rem;
+}
+.cardPlus li {
+    font-size: 1.8rem;
+    font-weight: 400;
+
+    z-index: 4;
+
+    text-align: start;
+    
+}
+.cardPlus button {
+    height: 4rem;
+    width: 14rem;
+
+    border: none;
+    border-radius: 10px;
+    
+    margin-top: 3rem;
+    
+    
+    background-color: var(--background-color);
+
+    z-index: 4;
+
+}
+.cardPlus button:hover {
+    transform: translateY(-10px);
+    
+    
+    color: white;
+}
+button a:hover{
+    color: wheat;
+}
+.pluspic {
+    position: absolute;
+    bottom: -10rem;
+    right: -40rem;
+
+    cursor: initial;
+}
