--- a/style.css
+++ b/style.css
@@ -30,18 +30,21 @@ body img {
 }
 /* -----------------POPUPCADASTRO---------------- */
 .cadastrowrapper {
-    width: 100%;
-    height: 100%;
-    transform: translateY(-100%);
-    z-index: 6;
-    transition: 400ms;
-    position: fixed;
-   
-    align-items: center;
-    justify-items: center;
-    margin-block: auto;
     display: flex;
     flex-direction: column;
+    position: fixed;
+
+    width: 100%;
+    height: 100%;
+
+    transform: translateY(-100%);
+    z-index: 6;
+
+    transition: 400ms;
+   
+    align-items: center;
+    justify-content: center;
+    margin-block: auto;
   }
   /* .divAllCadastro {
   } */
@@ -98,15 +101,18 @@ body img {
    }
 .popup_wrapper {
   padding-block: 5%;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(0, 0 ,0, .5);
+
+  position: relative;
   z-index: 5;
+  right: 100rem;
   
   align-content: center;
   display: flex;
   flex-direction: column;
- transform: translateY(100%);
+  transform: translateY(100%);
   transition: 400ms;
   
 }
@@ -118,7 +124,7 @@ body img {
   position:absolute;
   position: fixed;
   
-  z-index: 1;
+  z-index: 8;
   transform: translateX(100%);
   transition: 400ms;
 }
@@ -126,7 +132,7 @@ body img {
   transform: translateX(0%)!important;
 }
 .show {
-    transform: translateX(15%);
+    transform: translateX(0%);
    
   }
   .popup_wrapper {
@@ -160,7 +166,9 @@ body img {
 
 .popup {
   justify-content: space-between;
-  position: relative;
+  position: absolute;
+  /* top: 20%;
+  left: 20%;  */
   background: white;
   width: 60%;
   height: 100%;
@@ -360,6 +368,20 @@ color: white;
   
 }
 
+/* --------------------------ALLLOGIN------------------------ */
+.popup_wrapper {
+  position: absolute;
+  z-index: 12;
+  right: 0rem;
+  top: 0rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
+
+  width: 100vw;
+  height: 100vh;
+}
 /* --------------------------NAV------------------------ */
 nav {
     transition: 900ms ease-in-out;
