--- a/style.css
+++ b/style.css
@@ -1053,7 +1053,9 @@ button a:hover{
 
   position: absolute;
 
-  top: 15rem;
+  top: 0rem;
+
+  padding-top: 60rem;
   /* left: -100rem; */
   transform: translateX(-100%);
 }
@@ -1064,7 +1066,9 @@ button a:hover{
 
   position: absolute;
 
-  top: 15rem;
+  top: 0rem;
+
+  padding-top: 60rem;
   /* left: -100rem; */
   transform: translateX(300%);
 
@@ -1076,7 +1080,9 @@ button a:hover{
 
   position: absolute;
 
-  top: 15rem;
+  top: 0rem;
+
+  padding-top: 60rem;
   /* left: -100rem; */
   transform: translateX(-100%);
 }
@@ -1087,7 +1093,9 @@ button a:hover{
 
   position: absolute;
 
-  top: 15rem;
+  top: 0rem;
+
+  padding-top: 60rem;
   /* left: -100rem; */
   transform: translateX(300%);
 }
